# rood

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs
src/cli/: mod.rs  output.rs
src/sys/: architecture.rs  file.rs  mod.rs  notify.rs  platform.rs
