[package]
name = "rood"
version = "0.5.0"
authors = ["William Dussault <william@dussault.dev>", "Purposed"]
edition = "2018"
license-file = "LICENSE"
description = "General & configurable tools library for Purposed projects"
repository = "https://github.com/purposed/rood"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["minimal"]

full = ["light"]
light = ["minimal", "serialization"]
minimal = ["cli", "errors", "sys"]

cli = ["atty", "colored", "rpassword"]
errors = []
sys = []
serialization = ["serde"]

[dependencies]
atty = { version = "0.2", optional = true }
colored = { version = "2.0.0", optional = true }
rpassword = { version = "5.0", optional = true }
serde = { version = "1.0.104", features = ["derive"], optional = true }
